# thailandsop

./: .gitignore  VideoInferenceDemo.sln  analysis_config.json  app_config.json  camera_config.json  db_config.json  tcn_feature_config.json  tcn_infer_config.json
CurveLabelTool/: README.md  app.py  pyproject.toml  requirements.txt  run.ps1  setup_env.ps1
DL/: onnx_inference_spec.md
TCNModel/: README.md  download_uci_har.py  train_tcn.py
Tools/: TroubleshootOrtCuda.ps1  export_onnx_to_engine.py  export_pt_to_onnx.py
docs/: ANALYSIS_FRAMEWORK.md  CAMERA_RECORDING.md  DATABASE_V4_NOTES.md  FINGERPRINT_MODULE_MODBUS.md  FRAMEWORK_DECOUPLING_REFACTOR_PLAN.md  FSM_DATAFLOW_COUPLING_GUIDE.md  IMAGE_INSPECTION_ARCHITECTURE_PLAN.md  IMAGE_INSPECTION_REFINED_REQUIREMENTS.md  JETSON_DEPLOYMENT.md  JETSON_HEADLESS_RUN.md  JETSON_HOST_PREREQUISITES.md  JETSON_NATIVE_RUNTIME_LAYOUT.md  JETSON_OPENCV_FFMPEG_RUNTIME_STRATEGY.md  JETSON_PORTING_PLAN.md  JETSON_RUNTIME_DIAGNOSTICS.md  MAINVIEWMODEL_REFINEMENT_PLAN_2026-05-16.md  MAIN_PIPELINE_RESPONSIBILITY_REVIEW.md  MEDIAPIPE_LOCAL_SETUP.md  MEDIAPIPE_ONE_CLICK_RUNTIME.md  MEDIAPIPE_SIDECAR_PLAN.md  MODEL_BUNDLES.md  MODEL_INTEGRATION_GUIDE.md  NEXT_TASK_ROADMAP_2026-05-16.md  PIPELINE_PERFORMANCE_REVIEW.md  ROI_IMPLEMENTATION_PLAN.md  ROI_PREPROCESS_LAYER_DESIGN.md  SESSION_CONTROLLER_NOTES.md  SOP_RULE_BASED_ANALYSIS_PLAN.md  SPECIAL_TASK_RUNTIME_PLAN.md  TROUBLESHOOTING_CUDA.md  VIDEO_FILE_TIMING.md  VISION_TASK_REFACTOR_PLAN.md
scripts/: rename_xanylabeling_labels.py  setup-mediapipe-hand-runtime.cmd  (+1 more)
sql/: schema_v4.sql  (+1 more)
(+532 files in other folders)
