[project]
name = "curve-label-tool"
version = "0.1.0"
description = "Curve-based labeling prototype for SOP inference SQLite data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.41",
  "pandas>=2.2",
  "plotly>=5.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
